# Multimodal-data-analysis-with-LLM-and-python

./: .gitignore  agent.py  data_analysis_server.py  images_qa.py  main.py  math_server.py  requirements.txt  table_qa.py  tavily_server.py  text_qa.py  translator_server.py
RAG/: .env.example  architecture.txt  main.py  pyproject.toml  requirements.txt  run.py  scheduler.py  setup.py
RAG/config/: google_drive_processed_files.json  processing_queue.json
RAG/connectors/: GoogleDriveConnector.py  LocalFileSystemConnector.py  SQLDatabaseConnector.py  connector_base.py  google_drive_connector.py  local_file_connector.py  sql_connector.py
RAG/data/input/localfile/: catholicsm.txt  motivation.docx
RAG/data/processed/embeddings_cache/sentence-transformers/: all-mpnet-base-v2061e318a-c7b5-57a5-a855-6ab9046f9504  all-mpnet-base-v20645c9b6-cc01-5005-8807-e41ce36528db  all-mpnet-base-v215e6a371-91c9-5b3f-823a-b4993a1e6c60  all-mpnet-base-v217b9c9f0-b51e-523b-b190-a85f96459fc5  all-mpnet-base-v21db8b9a1-c015-5f68-bda7-a2465dd2dd88  all-mpnet-base-v228bd5cd2-7b46-5a91-b7bb-95286ce92f87  (+25 more)
RAG/data/raw/local/: invoice.docx  meeting.txt
RAG/manager/: connector_manager.py
RAG/managers/: connectorManager.py  stateManager.py
RAG/settings/: config.py  gmail_config.json  logger.py
RAG/src/: pipeline.py
RAG/src/chunkers/: base_chunker.py  factory.py  text_chunker.py
RAG/src/config/: settings.py
RAG/src/connectors/: base.py  local_file.py
RAG/src/embeddings/: embedding_processor.py
RAG/src/readers/: base_reader.py  doc_reader.py  factory.py  schema.py  txt_reader.py
RAG/src/utils/: error_handler.py  logger.py  state_manager.py
(+3 files in other folders)
